--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,18 +1,27 @@
 name: Pac-Man Contribution Graph
 on:
   schedule:
-    # Runs every day at 12:00 AM UTC
     - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
       - uses: Platane/snk@v3
         with:
           github_user_name: mikeaig4real
           outputs: |
             dist/pacman-contribution-graph.svg
-            dist/pacman-contribution-graph-dark.svg?palette=oceanic
+            "dist/pacman-contribution-graph-dark.svg?palette=oceanic"
+
+      - name: Commit and push the generated files
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add dist/*.svg
+          git commit -m "Update pacman contribution graph" || echo "No changes"
+          git push
